<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">KELLY</string>
    <string name="last_name">TRUONG</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">I\'m a Junior at Columbia University studying CS. I am from Houston, Texas and am an aspiring Software Developer.</string>


    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 Video Editing</string>
    <string name="profile_hobby_second_text">🥈 Cooking/Gardening</string>
    <string name="profile_hobby_third_text">🥉Learning Languages</string>
</resources>